Добавлены тесты (Unit, Integration, WebMvc, Mockito)